--- a/slitaz/template.html
+++ b/slitaz/template.html
@@ -1,54 +1,56 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
 <head>
-	<title>SliTaz Doc - Template</title>
+	<title>SliTaz - System doc</title>
 	<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1" />
-	<meta name="description" content="SliTaz documentation book" />
+	<meta name="description" content="slitaz doc system releases notes information cooking" />
 	<meta name="expires" content="never" />
-	<meta name="modified" content="2008-03-12 16:30:00" />
+	<meta name="modified" content="2008-03-14 11:30:00" />
 	<meta name="publisher" content="www.slitaz.org" />
 	<meta name="author" content="Christophe Lincoln"/>
-	<link rel="stylesheet" type="text/css" href="style.css" />
+	<link rel="shortcut icon" href="favicon.ico" />
+	<link rel="stylesheet" type="text/css" href="book.css" />
 </head>
 <body bgcolor="#ffffff">
-<!-- Header -->
+
+<!-- Header and quick navigation -->
 <div id="header">
-	<a name="top"></a>
-	<h1>SliTaz GNU/Linux</h1>
+<div align="right" id="quicknav">
+    <a name="top"></a>
+	<a href="index.html">Index of /usr/share/doc/slitaz</a> |
+	<a href="http://www.slitaz.org/doc/">www.slitaz.org/doc/</a>
+</div>
+<h1><font color="#3E1220">SliTaz - System doc</font></h1>
 </div>
 
-<!-- Content -->
+<!-- Content. -->
 <div id="content">
+<div class="content-right"></div>
 
-<h2><font color="#DF8F06">Generic xHTML template</font></h2>
+<h2><font color="#DF8F06">Template</font></h2>
 
-<!--
+<p>
+CONTENT
+</p>
 
-    Here we go...
 
-    <h3><font color="#6c0023">H3 in color</font></h3>
-
--->
-
+<!-- End of content -->
 </div>
-<!-- End content -->
-<hr />
 
-<!-- Footer -->
-<div align="center" id="footer">
-<p>
-<font size="-1">
-    <a href="#top">Haut de la page</a>
-</font>
-</p>
-<p>
-<font size="-1">
-    Copyright &copy; 2008 <a href="http://www.slitaz.org/">SliTaz</a> -
-    <a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License</a><br />
-    Code <a href="http://validator.w3.org/">XHTML 1.0 valide</a>.
-</font>
-</p>
+<!-- Footer. -->
+<div id="footer">
+	<div class="footer-right"></div>
+	<a href="#top">Haut de la page</a> | 
+	<a href="index.html">Index of /usr/share/doc/slitaz</a>
+</div>
+
+<div id="copy">
+	Copyright &copy; 2008 <a href="http://www.slitaz.org/">SliTaz</a> -
+	<a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License</a>;<br />
+	Documentation publiées sous
+	<a href="http://www.gnu.org/copyleft/fdl.html">GNU Free Documentation License</a>
+	et codée en <a href="http://validator.w3.org/">xHTML 1.0 valide</a>.
 </div>
 
 </body>
