--- a/slitaz/index.html
+++ b/slitaz/index.html
@@ -1,32 +1,40 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
 <head>
-	<title>SliTaz GNU/Linux - Documentation</title>
+	<title>SliTaz - System doc</title>
 	<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1" />
-	<meta name="description" content="Documentation contenue sur SliTaz GNU/Linux" />
+	<meta name="description" content="slitaz doc system releases notes information cooking" />
 	<meta name="expires" content="never" />
-	<meta name="modified" content="2008-03-11 22:30:00" />
+	<meta name="modified" content="2008-03-14 11:30:00" />
 	<meta name="publisher" content="www.slitaz.org" />
 	<meta name="author" content="Christophe Lincoln"/>
-	<link rel="stylesheet" type="text/css" href="style.css" />
+	<link rel="shortcut icon" href="favicon.ico" />
+	<link rel="stylesheet" type="text/css" href="book.css" />
 </head>
 <body bgcolor="#ffffff">
-<!-- Header -->
+
+<!-- Header and quick navigation -->
 <div id="header">
-	<a name="top"></a>
-	<h1>SliTaz GNU/Linux - Documentation</h1>
+<div align="right" id="quicknav">
+    <a name="top"></a>
+	<a href="index.html">Index of /usr/share/doc/slitaz</a> |
+	<a href="http://www.slitaz.org/doc/">www.slitaz.org/doc/</a>
+</div>
+<h1><font color="#3E1220">SliTaz - System doc</font></h1>
 </div>
 
-<!-- Content -->
+<!-- Content. -->
 <div id="content">
+<div class="content-right"></div>
+
 <h2><font color="#DF8F06">Index of /usr/share/doc/slitaz</font></h2>
 
 <h3><font color="#6c0023">Stable - Releases Notes</font></h3>
 <p>
 [<code>fr</code>] La version stable de SliTaz GNU/linux est distribuée avec 
 les manuels des outils de la distribution et 
-<a href="relnotes.html">les notes de publication</a>. Tous les manuels 
+<a href="relnotes.fr.html">les notes de publication</a>. Tous les manuels 
 ainsi que cette page sont directement accessibles depuis le menu documention
 du gestionnaire de fenêtres JWM présent sur le LiveCD. Sur le Web, vous 
 trouverez une documentation complète via le livre de main ou 
@@ -36,11 +44,12 @@ support technique gratuit via la liste de discussion ou
 </p>
 <h4></h4>
 <p>
-[<code>en</code>] SliTaz GNU/Linux stable release dont have English Release
-Notes installed on the system. Please, check the 
-<a href="http://www.slitaz.org/en/">English project page</a> for general 
-informations on SliTaz. To use and configure the system you can read the
-<a href="http://www.slitaz.org/en/doc/handbook/">English Handbook</a>.
+[<code>en</code>] SliTaz GNU/Linux stable release is published with the project
+tools manuals and the English <a href="relnotes.en.html">Release Notes</a> 
+installed on the system. Manuals and this page are accessible through JWM menu.
+Please, check the <a href="http://www.slitaz.org/en/">English project page</a>
+for general informations on SliTaz. To use and configure the system you can
+read the <a href="http://www.slitaz.org/en/doc/handbook/">English Handbook</a>.
 </p>
 
 <h3><font color="#6c0023">Cooking - Informations</font></h3>
@@ -55,25 +64,23 @@ trouvant sur le site web de SliTaz ou via le
 <a href="http://forum.slitaz.org/">forum</a> du projet.
 </p>
 
-<!-- End content -->
-</div>
-<hr />
 
-<!-- Footer -->
-<div align="center" id="footer">
-<p>
-<font size="-1">
-	<a href="../">Index of /usr/share/doc</a> |
-    <a href="#top">Haut de la page</a>
-</font>
-</p>
-<p>
-<font size="-1">
-    Copyright &copy; 2008 <a href="http://www.slitaz.org/">SliTaz</a> -
-    <a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License</a><br />
-    Code <a href="http://validator.w3.org/">XHTML 1.0 valide</a>.
-</font>
-</p>
+<!-- End of content -->
+</div>
+
+<!-- Footer. -->
+<div id="footer">
+	<div class="footer-right"></div>
+	<a href="#top">Haut de la page</a> | 
+	<a href="index.html">Index of /usr/share/doc/slitaz</a>
+</div>
+
+<div id="copy">
+	Copyright &copy; 2008 <a href="http://www.slitaz.org/">SliTaz</a> -
+	<a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License</a>;<br />
+	Documentation publiées sous
+	<a href="http://www.gnu.org/copyleft/fdl.html">GNU Free Documentation License</a>
+	et codée en <a href="http://validator.w3.org/">xHTML 1.0 valide</a>.
 </div>
 
 </body>
