No more relnotes in cooking version

--- a/slitaz/index.html
+++ b/slitaz/index.html
@@ -33,11 +33,10 @@
 <h3><font color="#6c0023">Stable - Releases Notes</font></h3>
 <p>
 [<code>fr</code>] La version stable de SliTaz GNU/linux est distribuée avec 
-les manuels des outils de la distribution et 
-<a href="relnotes.fr.html">les notes de publication</a>. Tous les manuels 
-ainsi que cette page sont directement accessibles depuis le menu documention
-du gestionnaire de fenêtres JWM présent sur le LiveCD. Sur le Web, vous 
-trouverez une documentation complète via le livre de main ou 
+les manuels des outils de la distribution et les notes de publication. Tous 
+les manuels ainsi que cette page sont directement accessibles depuis le menu 
+documention du gestionnaire de fenêtres JWM présent sur le LiveCD. Sur le Web,
+vous trouverez une documentation complète via le livre de main ou 
 <a href="http://www.slitaz.org/doc/handbook/">Handbook</a> de SliTaz et un 
 support technique gratuit via la liste de discussion ou
 <a href="http://forum.slitaz.org/">le forum</a>.
@@ -45,11 +44,11 @@ support technique gratuit via la liste de discussion ou
 <h4></h4>
 <p>
 [<code>en</code>] SliTaz GNU/Linux stable release is published with the project
-tools manuals and the English <a href="relnotes.en.html">Release Notes</a> 
-installed on the system. Manuals and this page are accessible through JWM menu.
-Please, check the <a href="http://www.slitaz.org/en/">English project page</a>
-for general informations on SliTaz. To use and configure the system you can
-read the <a href="http://www.slitaz.org/en/doc/handbook/">English Handbook</a>.
+tools manuals and the English Release Notes installed on the system. Manuals 
+and this page are accessible through JWM menu. Please, check the 
+<a href="http://www.slitaz.org/en/">English project page</a> for general 
+informations on SliTaz. To use and configure the system you can read the 
+<a href="http://www.slitaz.org/en/doc/handbook/">English Handbook</a>.
 </p>
 
 <h3><font color="#6c0023">Cooking - Informations</font></h3>
