--- a/slitaz/index.html
+++ b/slitaz/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1" />
 	<meta name="description" content="slitaz doc system releases notes information cooking" />
 	<meta name="expires" content="never" />
-	<meta name="modified" content="2008-03-14 11:30:00" />
+	<meta name="modified" content="2009-03-27 17:30:00" />
 	<meta name="publisher" content="www.slitaz.org" />
 	<meta name="author" content="Christophe Lincoln"/>
 	<link rel="shortcut icon" href="favicon.ico" />
@@ -32,23 +32,27 @@
 
 <h3><font color="#6c0023">Stable - Releases Notes</font></h3>
 <p>
-[<code>fr</code>] La version stable de SliTaz GNU/linux est distribuée avec 
-les manuels des outils de la distribution et les notes de publication. Tous 
-les manuels ainsi que cette page sont directement accessibles depuis le menu 
-documention du gestionnaire de fenêtres JWM présent sur le LiveCD. Sur le Web,
-vous trouverez une documentation complète via le livre de main ou 
-<a href="http://www.slitaz.org/doc/handbook/">Handbook</a> de SliTaz et un 
-support technique gratuit via la liste de discussion ou
-<a href="http://forum.slitaz.org/">le forum</a>.
-</p>
-<h4></h4>
-<p>
 [<code>en</code>] SliTaz GNU/Linux stable release is published with the project
-tools manuals and the English Release Notes installed on the system. Manuals 
-and this page are accessible through JWM menu. Please, check the 
+tools manuals and the <a href="relnotes.en.html">English Release Notes</a>
+installed on the system. Manuals and this page are accessible through 
+Openbox menu. Please, check the 
 <a href="http://www.slitaz.org/en/">English project page</a> for general 
 informations on SliTaz. To use and configure the system you can read the 
 <a href="http://www.slitaz.org/en/doc/handbook/">English Handbook</a>.
+Community documentation can be found on 
+<a href="http://wiki.slitaz.org/">SliTaz Wiki</a>
+</p>
+
+<p>
+[<code>fr</code>] La version stable de SliTaz GNU/linux est distribuée avec 
+les manuels des outils de la distribution et 
+<a href="relnotes.fr.html">les notes de publication</a>. Tous les manuels
+ainsi que cette page sont directement accessibles depuis le menu 
+documention du gestionnaire de fenêtres Openbox présent sur le LiveCD.
+Sur le Web, vous trouverez une documentation complète via le livre de main ou 
+<a href="http://www.slitaz.org/doc/handbook/">Handbook</a> de SliTaz et un 
+support technique gratuit via la liste de discussion ou
+<a href="http://forum.slitaz.org/">le forum</a>.
 </p>
 
 <h3><font color="#6c0023">Cooking - Informations</font></h3>
@@ -75,7 +79,7 @@ trouvant sur le site web de SliTaz ou via le
 </div>
 
 <div id="copy">
-	Copyright &copy; 2008 <a href="http://www.slitaz.org/">SliTaz</a> -
+	Copyright &copy; 2009 <a href="http://www.slitaz.org/">SliTaz</a> -
 	<a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License</a>;<br />
 	Documentation publiées sous
 	<a href="http://www.gnu.org/copyleft/fdl.html">GNU Free Documentation License</a>
