--- a/slitaz/index.html
+++ b/slitaz/index.html
@@ -17,9 +17,10 @@
 <!-- Header and quick navigation -->
 <div id="header">
 <div align="right" id="quicknav">
-    <a name="top"></a>
-	<a href="index.html">Index of /usr/share/doc/slitaz</a> |
-	<a href="http://www.slitaz.org/doc/">www.slitaz.org/doc/</a>
+	<a name="top"></a>
+	<a href="http://www.slitaz.org/doc/">www.slitaz.org</a> |
+	<a href="http://forum.slitaz.org/doc/">forum.slitaz.org</a> |
+	<a href="http://labs.slitaz.org/doc/">labs.slitaz.org</a>
 </div>
 <h1><font color="#3E1220">SliTaz - System doc</font></h1>
 </div>
@@ -28,45 +29,86 @@
 <div id="content">
 <div class="content-right"></div>
 
-<h2><font color="#DF8F06">Index of /usr/share/doc/slitaz</font></h2>
-
-<h3><font color="#6c0023">Stable - Releases Notes</font></h3>
+<h2><font color="#DF8F06">Documentation</font></h2>
 <p>
-[<code>en</code>] SliTaz GNU/Linux stable release is published with the project
-tools manuals and the <a href="relnotes.en.html">English Release Notes</a>
+<a href="#en" title="English">Welcome</a> -
+<a href="#fr" title="Français">Bienvenue</a> -
+SliTaz/Linux open-source community operating system
+</p>
+
+<a name="en"></a>
+<h3><font color="#6c0023">[en] Releases Notes</font></h3>
+<p>
+SliTaz GNU/Linux stable release is published with the project tools 
+manuals and the <a href="relnotes.en.html">English Release Notes</a>
 installed on the system. Manuals and this page are accessible through 
 Openbox menu. Please, check the 
 <a href="http://www.slitaz.org/en/">English project page</a> for general 
 informations on SliTaz. To use and configure the system you can read the 
 <a href="http://www.slitaz.org/en/doc/handbook/">English Handbook</a>.
 Community documentation can be found on 
-<a href="http://wiki.slitaz.org/">SliTaz Wiki</a>
+<a href="http://wiki.slitaz.org/">SliTaz Wiki</a> and support on SliTaz
+community <a href="http://wiki.slitaz.org/">Forum</a>. 
+</p>
+<p>
+Cooking version dont provide Release Notes, changes are announced on the
+web site and the <a href="http://labs.slitaz.org/">Labs</a> provide fresh
+news about the project activity. Like the stable version, you will find 
+documentation on SliTaz web site and support on the community Forum.
 </p>
 
+<a name="fr"></a>
+<h3><font color="#6c0023">[fr] Notes de publication</font></h3>
 <p>
-[<code>fr</code>] La version stable de SliTaz GNU/linux est distribuée avec 
-les manuels des outils de la distribution et 
+La version stable de SliTaz GNU/linux est distribuée avec les manuels 
+des outils de la distribution et 
 <a href="relnotes.fr.html">les notes de publication</a>. Tous les manuels
 ainsi que cette page sont directement accessibles depuis le menu 
 documention du gestionnaire de fenêtres Openbox présent sur le LiveCD.
 Sur le Web, vous trouverez une documentation complète via le livre de main ou 
-<a href="http://www.slitaz.org/doc/handbook/">Handbook</a> de SliTaz et un 
-support technique gratuit via la liste de discussion ou
-<a href="http://forum.slitaz.org/">le forum</a>.
+<a href="http://www.slitaz.org/doc/handbook/">Handbook</a> de SliTaz et la
+documentation communautaire sur le <a href="http://wiki.slitaz.org/">Wiki</a>.
+Pour de l'aide vous trouverez un support technique gratuit via la liste
+de discussion ou <a href="http://forum.slitaz.org/">le forum</a> communautaire.
 </p>
-
-<h3><font color="#6c0023">Cooking - Informations</font></h3>
 <p>
-La version en cuisson ou <em>Cooking</em> ne fournit pas de notes ou autres,
-elle est trop souvent mise à jour et modifiée. Cela dit, vous pouvez vous 
-référer à <a href="http://www.slitaz.org/doc/">la documentation du site</a>. 
-Nous vous conseillons de commencer par consulter le livre de main ou 
-<a href="http://www.slitaz.org/doc/handbook/">Handbook</a>. Merci de nous 
-faire part de vos suggestions et remarques via les informations de contact se 
-trouvant sur le site web de SliTaz ou via le 
-<a href="http://forum.slitaz.org/">forum</a> du projet.
+La version en cuisson ou <em>Cooking</em> ne fourni pas de notes de
+publication, les chagements sont annonçés sur le site web et 
+<a href="http://labs.slitaz.org/">les laboratoires</a> proposent des
+nouvelles fraîches. Comme pour la version stable, vous pouvez vous 
+référer à la documentation du site et trouverez de l'aide sur 
+<a href="http://forum.slitaz.org/">le forum</a> du projet.
 </p>
 
+<a name="cloud"></a>
+<h3><font color="#6c0023">Tag cloud</font></h3>
+<!-- 10 Cloud tag are available. -->
+<div id="cloud">
+<p>
+	<a href="http://forum.slitaz.org/" class="tag6">Support</a>
+	<a href="http://www.slitaz.org/en/doc/handbook/livecd.html" class="tag9">LiveCD</a>
+	<a href="http://www.slitaz.org/en/doc/" class="tag3">Documentations</a>
+	<a href="http://www.slitaz.org/en/" class="tag7">SliTaz GNU/Linux</a>
+	<a href="http://www.slitaz.org/en/about/" class="tag4">About</a>
+	<a href="http://labs.slitaz.org/" class="tag6">Laboratories</a>
+	<a href="http://www.slitaz.org/en/doc/handbook/" class="tag6">Handbook</a>
+	<a href="http://www.slitaz.org/en/doc/handbook/network-config.html" class="tag4">Wifi</a>
+	<a href="http://www.slitaz.org/en/doc/handbook/packages.html" class="tag6">Packages managment</a>
+	<a href="http://www.slitaz.org/en/doc/handbook/liveusb.html" class="tag8">LiveUSB</a>
+	<a href="http://www.slitaz.org/en/devel/" class="tag5">Development</a>
+	<a href="http://www.slitaz.org/en/doc/handbook/enlightenment.html" class="tag3">e17</a>
+	<a href="http://www.slitaz.org/en/packages/" class="tag6">Packages</a>
+	<a href="http://wiki.slitaz.org/" class="tag6">Wiki</a>
+	<a href="http://www.slitaz.org/en/doc/cookbook/" class="tag3">Cookbook</a>
+	<a href="http://labs.slitaz.org/news" class="tag6">Labs News</a>
+	<a href="http://www.slitaz.org/en/doc/handbook/security.html" class="tag5">Security</a>
+	<a href="http://www.slitaz.org/en/doc/handbook/openbox.html" class="tag7">Openbox</a>
+	<a href="http://www.slitaz.org/en/mailing-list.html" class="tag5">Mailing list</a>
+	<a href="http://www.slitaz.org/en/artwork/" class="tag4">Artwork</a>
+	<a href="http://www.slitaz.org/en/get/flavors.html" class="tag6">LiveCD flavor</a>
+	<a href="http://boot.slitaz.org/" class="tag8">Web Boot</a>
+</p>
+</div>
 
 <!-- End of content -->
 </div>
@@ -74,8 +116,7 @@ trouvant sur le site web de SliTaz ou via le
 <!-- Footer. -->
 <div id="footer">
 	<div class="footer-right"></div>
-	<a href="#top">Haut de la page</a> | 
-	<a href="index.html">Index of /usr/share/doc/slitaz</a>
+	<a href="#top">Top of the page</a>
 </div>
 
 <div id="copy">
