--- a/slitaz/index.html
+++ b/slitaz/index.html
@@ -33,7 +33,7 @@
 <p>
 <a href="#en" title="English">Welcome</a> -
 <a href="#fr" title="Français">Bienvenue</a> -
-SliTaz/Linux open-source community operating system
+SliTaz GNU/Linux open-source community operating system.
 </p>
 
 <a name="en"></a>
@@ -41,20 +41,20 @@ SliTaz/Linux open-source community operating system
 <p>
 SliTaz GNU/Linux stable release is published with the project tools 
 manuals and the <a href="relnotes.en.html">English Release Notes</a>
-installed on the system. Manuals and this page are accessible through 
-Openbox menu. Please, check the 
+installed on the system. Manuals and this page are accessible 
+through the Openbox menu. Please, check the 
 <a href="http://www.slitaz.org/en/">English project page</a> for general 
-informations on SliTaz. To use and configure the system you can read the 
+information on SliTaz. To use and configure the system you can read the 
 <a href="http://www.slitaz.org/en/doc/handbook/">English Handbook</a>.
-Community documentation can be found on 
-<a href="http://wiki.slitaz.org/">SliTaz Wiki</a> and support on SliTaz
-community <a href="http://wiki.slitaz.org/">Forum</a>. 
+Community documentation can be found on the
+<a href="http://wiki.slitaz.org/">SliTaz Wiki</a> and support on the SliTaz
+community <a href="http://forum.slitaz.org/#idx2">Forum</a>. 
 </p>
 <p>
-Cooking version dont provide Release Notes, changes are announced on the
+The Cooking version doesn't provide Release Notes, any changes are announced on the
 web site and the <a href="http://labs.slitaz.org/">Labs</a> provide fresh
 news about the project activity. Like the stable version, you will find 
-documentation on SliTaz web site and support on the community Forum.
+documentation on the web site and support on the community forum.
 </p>
 
 <a name="fr"></a>
@@ -87,13 +87,13 @@ référer à la documentation du site et trouverez de l'aide sur
 <p>
 	<a href="http://forum.slitaz.org/" class="tag6">Support</a>
 	<a href="http://www.slitaz.org/en/doc/handbook/livecd.html" class="tag9">LiveCD</a>
-	<a href="http://www.slitaz.org/en/doc/" class="tag3">Documentations</a>
+	<a href="http://www.slitaz.org/en/doc/" class="tag3">Documentation</a>
 	<a href="http://www.slitaz.org/en/" class="tag7">SliTaz GNU/Linux</a>
 	<a href="http://www.slitaz.org/en/about/" class="tag4">About</a>
 	<a href="http://labs.slitaz.org/" class="tag6">Laboratories</a>
 	<a href="http://www.slitaz.org/en/doc/handbook/" class="tag6">Handbook</a>
 	<a href="http://www.slitaz.org/en/doc/handbook/network-config.html" class="tag4">Wifi</a>
-	<a href="http://www.slitaz.org/en/doc/handbook/packages.html" class="tag6">Packages managment</a>
+	<a href="http://www.slitaz.org/en/doc/handbook/packages.html" class="tag6">Package management</a>
 	<a href="http://www.slitaz.org/en/doc/handbook/liveusb.html" class="tag8">LiveUSB</a>
 	<a href="http://www.slitaz.org/en/devel/" class="tag5">Development</a>
 	<a href="http://www.slitaz.org/en/doc/handbook/enlightenment.html" class="tag3">e17</a>
