add pt info to index.html

--- a/slitaz/index.html
+++ b/slitaz/index.html
@@ -33,6 +33,7 @@
 <p>
 <a href="#en" title="English">Welcome</a> -
 <a href="#fr" title="Français">Bienvenue</a> -
+<a href="#pt" title="Português">Bem-vindo</a> -
 SliTaz GNU/Linux open-source community operating system.
 </p>
 
@@ -78,6 +79,28 @@ publication, les chagements sont annonçés sur le site web et
 nouvelles fraîches. Comme pour la version stable, vous pouvez vous 
 référer à la documentation du site et trouverez de l'aide sur 
 <a href="http://forum.slitaz.org/">le forum</a> du projet.
+</p>
+
+<a name="pt"></a>
+<h3><font color="#6c0023">[pt] Notas de Lançamento</font></h3>
+<p>
+A versão estável do SliTaz GNU/Linux é lançada em conjunto com os manuais das
+ferramentas do projeto e com as 
+<a href="relnotes.pt.html">Notas de lançamento em português</a> instaladas no
+sistema, sendo que ambos podem ser acessados pelo menu do Openbox. 
+Por favor, consulte a <a href="http://www.slitaz.org/pt/">página do projeto</a> 
+para informações gerais sobre a distribuição e, para usar e configurar o sistema,
+leia o <a href="http://www.slitaz.org/pt/doc/handbook/">Manual SliTaz</a>.
+A documentação criada pela comunidade encontra-se na
+<a href="http://wiki.slitaz.org/">Wiki do SliTaz</a> e suporte pode ser obtido no
+<a href="http://forum.slitaz.org/#idx4">Fórum</a>. 
+</p>
+<p>
+A versão de testes (cooking) do SliTaz não fornece notas de lançamento, qualquer
+mudança para esta versão é anunciada no website e o 
+<a href="http://labs.slitaz.org/">SliTaz Labs</a> traz as últimas notícias e 
+atividades do projeto. Assim como na versão estável, você irá obter informações
+sobre a versão de testes no website e suporte no fórum.
 </p>
 
 <a name="cloud"></a>
