--- a/slitaz/relnotes.pt.html
+++ b/slitaz/relnotes.pt.html
@@ -52,14 +52,26 @@ de muito trabalho. Baseada na versão 1.0 (lançada em 22 de março de 2008), o
 SliTaz consiste em cerca de 1400 pacotes facilmentes instaláveis
 por meio do gerenciador de pacotes Tazpkg. O LiveCD é totalmente configurável,
 o que permite criar facilmente uma distribuição customizada, específica para
-tarefas como multimídia, gráficos ou desenvolvimento. Suporte técnico é fornecido
-aos usuários por meio de uma lista de discussão e do fórum oficial. O "Manual
-SliTaz" ensina a usar e configurar o sistema. O SliTaz pode ser atualizado
-por meio do instalador gráfico ou por meio de um instalador em modo texto simples
-e rápido. Também pode ser instalado no disco rígido, ou usado em conjunto com
-mídias usb - o programa em modo texto TazUSB e sua versão em modo gráfico TazUSBbox
-permitem, com poucos comandos, criar um dispositivo usb formatado, configurado e
-pronto para o boot.
+tarefas como multimídia, gráficos ou desenvolvimento. Algumas melhorias para esta
+versão:
+</p>
+<ul>
+    <li>Melhor suporte à hardware para redes sem fio, drivers do windows, partições
+    NTFS e sistemas com pouca memória RAM (com a utilização das variantes - flavors)</li>
+    <li>Customização facilitada para que você possa criar sua própria distro</li>
+    <li>Suporte a Boot via web</li>
+    <li>Substituição do jwm pelo Openbox como gerenciador de janelas</li>
+    <li>Mais utilitários gráficos para administração, configuração e atualização 
+    do sistema</li>
+</ul>
+<p>
+Suporte técnico é fornecido aos usuários por meio de uma lista de discussão e do 
+fórum oficial. O "Manual SliTaz" ensina a usar e configurar o sistema. O SliTaz 
+pode ser atualizado por meio do instalador gráfico ou por meio de um instalador 
+em modo texto simples e rápido. Também pode ser instalado no disco rígido, ou 
+usado em conjunto com mídias usb - o programa em modo texto TazUSB e sua versão 
+em modo gráfico TazUSBbox permitem, com poucos comandos, criar um dispositivo usb 
+formatado, configurado e pronto para o boot.
 </p>
 <p>
 O sistema agora é configurado por meio de um centro de controle gráfico e os
@@ -298,7 +310,7 @@ por este método.
 O Projeto SliTaz orgulha-se de ser um projeto comunitário internacional. Os participantes
 são aqueles que desenvolvem a distribuição, corrigem o website, desenvolvem
 os repositórios HG e escrever a documentação oficial. São pessoas de vários países, como 
-a Suiça, França, Brazil, Inglaterra e vários outros.
+a Suiça, França, Brasil, Inglaterra, China, Rússia, E.U.A. e vários outros.
 </p>
 <ul>
 	<li>Christophe Lincoln</li>
@@ -327,7 +339,7 @@ a Suiça, França, Brazil, Inglaterra e vários outros.
 	<li>Rohit Joshi </li>
 </ul>
 <p>
-O projeto agradece a todos os revisores, hackers, testers e usuários que dedicam
+O projeto agradece a todos os revisores, hackers, avaliadores e usuários que dedicam
 parte do seu tempo para o crescimento da distribuição.
 </p>
 
