Typos in relnotes.fr.html

--- a/slitaz/relnotes.fr.html
+++ b/slitaz/relnotes.fr.html
@@ -71,7 +71,7 @@ ou TazUSBbox.
 Le système est configurable via un centre de contôle graphique et les paquets
 logiciels gérables avec l'interface graphique du gestionnaire de paquets
 Tazpkg. Le projet s'est efforcé de créer plusieurs interfaces graphiques
-à divers outils en ligne de commandes afin de facilité l'utilisation du
+à divers outils en ligne de commandes afin de faciliter l'utilisation du
 système.
 </p>
 <p>
@@ -91,7 +91,7 @@ binutils-2.17.50 et propose le noyau Linux 2.6.25.5. Le corps du LiveCD
 de SliTaz 2.0 propose Perl en remplacement de PHP comme langage de
 programmation. Les outils système Hardinfo et LXTask permettent de connaître
 et surveiller le matériel. Le support des partitions NTFS est aussi inclus
-sur le cdrom et le disque Windows sont facilement accessibles via le
+sur le cdrom et les disques Windows sont facilement accessibles via le
 gestionnaire de fichiers.
 </p>
 
@@ -181,7 +181,7 @@ tout en laissant le choix du système à utiliser au démarrage de la machine.
 <h3><font color="#6c0023">Noyau Linux</font></h3>
 <p>
 SliTaz GNU/linux 2.0 est distribuée avec le noyau Linux 2.6.25.5, patché pour
-supporter la compression LZMA et corrigé un problème d'affichage dans la
+supporter la compression LZMA et corriger un problème d'affichage dans la
 console virtuelle. Le support des disques IDE et SCSI est intégré ainsi que
 celui des systèmes de fichiers ext2 et ext3. La plupart des cartes réseau
 ethernet est supportées soit directement, soit sous forme de modules
@@ -214,7 +214,7 @@ de graphisme avec en autre Gimp et Inkscape. SliTaz peut aussi devenir un
 studio vidéo avec Kino, une borne internet avec messagerie internet, VOIP 
 et navigateur web. Le système est aussi conçu pour être un serveur puissant,
 léger, rapide et stable avec LightTPD/PHP, le support CGI Perl, Python ou
-Ruby. Apache, Squid sont disponibles et Rsync pour les sauvegardes incrémentales
+Ruby. Apache, Squid sont disponibles, Rsync pour les sauvegardes incrémentales
 et IPtables pour le pare-feu. SliTaz peut bien sûr fournir un système de développement
 complet avec entre autre le compilateur GCC, Mercurial, l'IDE Geany et 
 tous les paquets de développement des librairies. Les paquets peuvent être
