--- a/slitaz/relnotes.en.html
+++ b/slitaz/relnotes.en.html
@@ -59,7 +59,7 @@ graphics or development. Some of the new features in this release include:
 	memory systems (through flavors)</li>
     <li>Easier customization to roll your own distro</li>
     <li>Web Boot support</li>
-    <li>Openbox replaces jwm as window manager</li>
+    <li>Openbox replaces JWM as the window manager</li>
     <li>More tiny graphical utilities for administration, setting preferences,
 	system upgrade, etc</li>
 </ul>
