Add German relnotes (Huge tanks Sevala)

--- a/slitaz/index.html
+++ b/slitaz/index.html
@@ -34,11 +34,12 @@
 <a href="#en" title="English">Welcome</a> -
 <a href="#fr" title="Français">Bienvenue</a> -
 <a href="#pt" title="Português">Bem-vindo</a> -
+<a href="#de" title="Deutsch">Willkommen</a> -
 SliTaz GNU/Linux open-source community operating system.
 </p>
 
 <a name="en"></a>
-<h3><font color="#6c0023">[en] Releases Notes</font></h3>
+<h3><font color="#6c0023">[en] Release Notes</font></h3>
 <p>
 SliTaz GNU/Linux stable release is published with the project tools 
 manuals and the <a href="relnotes.en.html">English Release Notes</a>
@@ -56,6 +57,19 @@ The Cooking version doesn't provide Release Notes, any changes are announced on 
 web site and the <a href="http://labs.slitaz.org/">Labs</a> provide fresh
 news about the project activity. Like the stable version, you will find 
 documentation on the web site and support on the community forum.
+</p>
+
+<a name="de"></a>
+<h3><font color="#6c0023">[de] Release Notes</font></h3>
+<p>
+SliTaz GNU/Linux stable Release wird mit den Dokumentationen
+für die SliTaz-Werkzeuge und den <a href="relnotes.de.html">deutschen
+Release Notes</a> veröffentlicht. Dokumentation und diese Seite sind über
+das Openboxenü erreichbar. Bitte konsultieren Sie ebenfalls die
+<a href="http://www.slitaz.org/de/">Deutsche Projektseite</a> für allgemeine
+Informationen über SliTaz. Für die Benutzung des Systems lesen Sie bitte das
+<a href="http://wiki.slitaz.org/doku.php?id=lang:de:manual:manualstart">deutsche
+Handbuch</a>. das Teil des <a href="http://wiki.slitaz.org/">SliTaz Wiki</a> ist.
 </p>
 
 <a name="fr"></a>
