index.html: Fix links and edits

--- a/slitaz/index.html
+++ b/slitaz/index.html
@@ -18,9 +18,9 @@
 <div id="header">
 <div align="right" id="quicknav">
 	<a name="top"></a>
-	<a href="http://www.slitaz.org/doc/">www.slitaz.org</a> |
-	<a href="http://forum.slitaz.org/doc/">forum.slitaz.org</a> |
-	<a href="http://labs.slitaz.org/doc/">labs.slitaz.org</a>
+	<a href="http://www.slitaz.org/">www.slitaz.org</a> |
+	<a href="http://forum.slitaz.org/">forum.slitaz.org</a> |
+	<a href="http://labs.slitaz.org/">labs.slitaz.org</a>
 </div>
 <h1><font color="#3E1220">SliTaz - System doc</font></h1>
 </div>
@@ -41,13 +41,13 @@ SliTaz GNU/Linux open-source community operating system.
 <a name="en"></a>
 <h3><font color="#6c0023">[en] Release Notes</font></h3>
 <p>
-SliTaz GNU/Linux stable release is published with the project tools 
-manuals and the <a href="relnotes.en.html">English Release Notes</a>
+SliTaz GNU/Linux stable release is published with the project tools, 
+manuals and <a href="relnotes.en.html">Release Notes</a>
 installed on the system. Manuals and this page are accessible 
-through the Openbox menu. Please, check the 
-<a href="http://www.slitaz.org/en/">English project page</a> for general 
+through the Openbox menu. Please check the 
+<a href="http://www.slitaz.org/en/">project page</a> for general 
 information on SliTaz. To use and configure the system you can read the 
-<a href="http://www.slitaz.org/en/doc/handbook/">English Handbook</a>.
+<a href="http://www.slitaz.org/en/doc/handbook/">Handbook</a>.
 Community documentation can be found on the
 <a href="http://wiki.slitaz.org/">SliTaz Wiki</a> and support on the SliTaz
 community <a href="http://forum.slitaz.org/#idx2">Forum</a>. 
@@ -81,7 +81,7 @@ des outils de la distribution et
 ainsi que cette page sont directement accessibles depuis le menu 
 documention du gestionnaire de fenêtres Openbox présent sur le LiveCD.
 Sur le Web, vous trouverez une documentation complète via le livre de main ou 
-<a href="http://www.slitaz.org/doc/handbook/">Handbook</a> de SliTaz et la
+<a href="http://www.slitaz.org/fr/doc/handbook/">Handbook</a> de SliTaz et la
 documentation communautaire sur le <a href="http://wiki.slitaz.org/">Wiki</a>.
 Pour de l'aide vous trouverez un support technique gratuit via la liste
 de discussion ou <a href="http://forum.slitaz.org/">le forum</a> communautaire.
