--- a/slitaz/relnotes.en.html
+++ b/slitaz/relnotes.en.html
@@ -240,7 +240,7 @@ provide a menu based on the Freedesktop standards. The principle is to have a
 small menu accessible via a screen click with the favorites, windows effects,
 LiveCD and LiveUSB tools, Openbox configuration and system actions made available.
 Applications can also be accessed through the menu supplied by LXpanel. The 
-managment of the Desktop and icons are entrusted to file manager PCmanFM.
+managment of the Desktop and icons are entrusted to the file manager PCmanFM.
 </p>
 <p>
 Through the support of a LiveCD flavor or an installed system you can install
