Set release date for all relnotes

--- a/slitaz/relnotes.fr.html
+++ b/slitaz/relnotes.fr.html
@@ -48,7 +48,7 @@
 <a name="overview"></a>
 <h3><font color="#6c0023">Vue d'ensemble</font></h3>
 <p>
-SliTaz GNU/Linux 2.0 a été publiée le XX mars 2009 et comprend plus d'une
+SliTaz GNU/Linux 2.0 a été publiée le 16 avril 2009 et comprend plus d'une
 année de travail intensif. Cette nouvelle version du système est basée sur
 la version 1.0 publiée le 22 mars 2008. SliTaz 2.0 est un système libre, 
 complet et communautaire, proposant environ 1400 paquets logiciels facilement
