Removed relnotes and back to cooking...

--- a/slitaz/index.html
+++ b/slitaz/index.html
@@ -42,7 +42,7 @@ SliTaz GNU/Linux open-source community operating system.
 <h3><font color="#6c0023">[en] Release Notes</font></h3>
 <p>
 SliTaz GNU/Linux stable release is published with the project tools, 
-manuals and <a href="relnotes.en.html">Release Notes</a>
+manuals and Release Notes
 installed on the system. Manuals and this page are accessible 
 through the Openbox menu. Please check the 
 <a href="http://www.slitaz.org/en/">project page</a> for general 
@@ -63,8 +63,8 @@ documentation on the web site and support on the community forum.
 <h3><font color="#6c0023">[de] Release Notes</font></h3>
 <p>
 SliTaz GNU/Linux stable Release wird mit den Dokumentationen
-für die SliTaz-Werkzeuge und den <a href="relnotes.de.html">deutschen
-Release Notes</a> veröffentlicht. Dokumentation und diese Seite sind über
+für die SliTaz-Werkzeuge und den deutschen
+Release Notes veröffentlicht. Dokumentation und diese Seite sind über
 das Openboxenü erreichbar. Bitte konsultieren Sie ebenfalls die
 <a href="http://www.slitaz.org/de/">Deutsche Projektseite</a> für allgemeine
 Informationen über SliTaz. Für die Benutzung des Systems lesen Sie bitte das
@@ -77,7 +77,7 @@ Handbuch</a>. das Teil des <a href="http://wiki.slitaz.org/">SliTaz Wiki</a> ist
 <p>
 La version stable de SliTaz GNU/linux est distribuée avec les manuels 
 des outils de la distribution et 
-<a href="relnotes.fr.html">les notes de publication</a>. Tous les manuels
+les notes de publication. Tous les manuels
 ainsi que cette page sont directement accessibles depuis le menu 
 documention du gestionnaire de fenêtres Openbox présent sur le LiveCD.
 Sur le Web, vous trouverez une documentation complète via le livre de main ou 
@@ -100,7 +100,7 @@ référer à la documentation du site et trouverez de l'aide sur
 <p>
 A versão estável do SliTaz GNU/Linux é lançada em conjunto com os manuais das
 ferramentas do projeto e com as 
-<a href="relnotes.pt.html">Notas de lançamento em português</a> instaladas no
+Notas de lançamento em português instaladas no
 sistema, sendo que ambos podem ser acessados pelo menu do Openbox. 
 Por favor, consulte a <a href="http://www.slitaz.org/pt/">página do projeto</a> 
 para informações gerais sobre a distribuição e, para usar e configurar o sistema,
