Have an index for each language (tazlocale will do the job)

--- a/slitaz/index.html
+++ b/slitaz/index.html
@@ -1,168 +1,1 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
-<head>
-	<title>SliTaz - System doc</title>
-	<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1" />
-	<meta name="description" content="slitaz doc system releases notes information cooking" />
-	<meta name="expires" content="never" />
-	<meta name="modified" content="2009-04-16 10:30:00" />
-	<meta name="publisher" content="www.slitaz.org" />
-	<meta name="author" content="Christophe Lincoln"/>
-	<link rel="shortcut icon" href="favicon.ico" />
-	<link rel="stylesheet" type="text/css" href="book.css" />
-</head>
-<body bgcolor="#ffffff">
-
-<!-- Header and quick navigation -->
-<div id="header">
-<div align="right" id="quicknav">
-	<a name="top"></a>
-	<a href="http://www.slitaz.org/">www.slitaz.org</a> |
-	<a href="http://forum.slitaz.org/">forum.slitaz.org</a> |
-	<a href="http://labs.slitaz.org/">labs.slitaz.org</a>
-</div>
-<h1><font color="#3E1220">SliTaz - System doc</font></h1>
-</div>
-
-<!-- Content. -->
-<div id="content">
-<div class="content-right"></div>
-
-<h2><font color="#DF8F06">Documentation</font></h2>
-<p>
-<a href="#en" title="English">Welcome</a> -
-<a href="#fr" title="Français">Bienvenue</a> -
-<a href="#pt" title="Português">Bem-vindo</a> -
-<a href="#de" title="Deutsch">Willkommen</a> -
-SliTaz GNU/Linux open-source community operating system.
-</p>
-
-<a name="en"></a>
-<h3><font color="#6c0023">[en] Release Notes</font></h3>
-<p>
-SliTaz GNU/Linux stable release is published with the project tools, 
-manuals and Release Notes
-installed on the system. Manuals and this page are accessible 
-through the Openbox menu. Please check the 
-<a href="http://www.slitaz.org/en/">project page</a> for general 
-information on SliTaz. To use and configure the system you can read the 
-<a href="http://www.slitaz.org/en/doc/handbook/">Handbook</a>.
-Community documentation can be found on the
-<a href="http://wiki.slitaz.org/">SliTaz Wiki</a> and support on the SliTaz
-community <a href="http://forum.slitaz.org/#idx2">Forum</a>. 
-</p>
-<p>
-The Cooking version doesn't provide Release Notes, any changes are announced on the
-web site and the <a href="http://labs.slitaz.org/">Labs</a> provide fresh
-news about the project activity. Like the stable version, you will find 
-documentation on the web site and support on the community forum.
-</p>
-
-<a name="de"></a>
-<h3><font color="#6c0023">[de] Release Notes</font></h3>
-<p>
-SliTaz GNU/Linux stable Release wird mit den Dokumentationen
-für die SliTaz-Werkzeuge und den deutschen
-Release Notes veröffentlicht. Dokumentation und diese Seite sind über
-das Openboxenü erreichbar. Bitte konsultieren Sie ebenfalls die
-<a href="http://www.slitaz.org/de/">Deutsche Projektseite</a> für allgemeine
-Informationen über SliTaz. Für die Benutzung des Systems lesen Sie bitte das
-<a href="http://wiki.slitaz.org/doku.php?id=lang:de:manual:manualstart">deutsche
-Handbuch</a>. das Teil des <a href="http://wiki.slitaz.org/">SliTaz Wiki</a> ist.
-</p>
-
-<a name="fr"></a>
-<h3><font color="#6c0023">[fr] Notes de publication</font></h3>
-<p>
-La version stable de SliTaz GNU/linux est distribuée avec les manuels 
-des outils de la distribution et 
-les notes de publication. Tous les manuels
-ainsi que cette page sont directement accessibles depuis le menu 
-documention du gestionnaire de fenêtres Openbox présent sur le LiveCD.
-Sur le Web, vous trouverez une documentation complète via le livre de main ou 
-<a href="http://www.slitaz.org/fr/doc/handbook/">Handbook</a> de SliTaz et la
-documentation communautaire sur le <a href="http://wiki.slitaz.org/">Wiki</a>.
-Pour de l'aide vous trouverez un support technique gratuit via la liste
-de discussion ou <a href="http://forum.slitaz.org/">le forum</a> communautaire.
-</p>
-<p>
-La version en cuisson ou <em>Cooking</em> ne fourni pas de notes de
-publication, les chagements sont annonçés sur le site web et 
-<a href="http://labs.slitaz.org/">les laboratoires</a> proposent des
-nouvelles fraîches. Comme pour la version stable, vous pouvez vous 
-référer à la documentation du site et trouverez de l'aide sur 
-<a href="http://forum.slitaz.org/">le forum</a> du projet.
-</p>
-
-<a name="pt"></a>
-<h3><font color="#6c0023">[pt] Notas de Lançamento</font></h3>
-<p>
-A versão estável do SliTaz GNU/Linux é lançada em conjunto com os manuais das
-ferramentas do projeto e com as 
-Notas de lançamento em português instaladas no
-sistema, sendo que ambos podem ser acessados pelo menu do Openbox. 
-Por favor, consulte a <a href="http://www.slitaz.org/pt/">página do projeto</a> 
-para informações gerais sobre a distribuição e, para usar e configurar o sistema,
-leia o <a href="http://www.slitaz.org/pt/doc/handbook/">Manual SliTaz</a>.
-A documentação criada pela comunidade encontra-se na
-<a href="http://wiki.slitaz.org/">Wiki do SliTaz</a> e suporte pode ser obtido no
-<a href="http://forum.slitaz.org/#idx4">Fórum</a>. 
-</p>
-<p>
-A versão de testes (cooking) do SliTaz não fornece notas de lançamento, qualquer
-mudança para esta versão é anunciada no website e o 
-<a href="http://labs.slitaz.org/">SliTaz Labs</a> traz as últimas notícias e 
-atividades do projeto. Assim como na versão estável, você irá obter informações
-sobre a versão de testes no website e suporte no fórum.
-</p>
-
-<a name="cloud"></a>
-<h3><font color="#6c0023">Tag cloud</font></h3>
-<!-- 10 Cloud tag are available. -->
-<div id="cloud">
-<p>
-	<a href="http://forum.slitaz.org/" class="tag6">Support</a>
-	<a href="http://www.slitaz.org/en/doc/handbook/livecd.html" class="tag9">LiveCD</a>
-	<a href="http://www.slitaz.org/en/doc/" class="tag3">Documentation</a>
-	<a href="http://www.slitaz.org/en/" class="tag7">SliTaz GNU/Linux</a>
-	<a href="http://www.slitaz.org/en/about/" class="tag4">About</a>
-	<a href="http://labs.slitaz.org/" class="tag6">Laboratories</a>
-	<a href="http://www.slitaz.org/en/doc/handbook/" class="tag6">Handbook</a>
-	<a href="http://www.slitaz.org/en/doc/handbook/network-config.html" class="tag4">Wifi</a>
-	<a href="http://www.slitaz.org/en/doc/handbook/packages.html" class="tag6">Package management</a>
-	<a href="http://www.slitaz.org/en/doc/handbook/liveusb.html" class="tag8">LiveUSB</a>
-	<a href="http://www.slitaz.org/en/devel/" class="tag5">Development</a>
-	<a href="http://www.slitaz.org/en/doc/handbook/enlightenment.html" class="tag3">e17</a>
-	<a href="http://www.slitaz.org/en/packages/" class="tag6">Packages</a>
-	<a href="http://wiki.slitaz.org/" class="tag6">Wiki</a>
-	<a href="http://www.slitaz.org/en/doc/cookbook/" class="tag3">Cookbook</a>
-	<a href="http://labs.slitaz.org/news" class="tag6">Labs News</a>
-	<a href="http://www.slitaz.org/en/doc/handbook/security.html" class="tag5">Security</a>
-	<a href="http://www.slitaz.org/en/doc/handbook/openbox.html" class="tag7">Openbox</a>
-	<a href="http://www.slitaz.org/en/mailing-list.html" class="tag5">Mailing list</a>
-	<a href="http://www.slitaz.org/en/artwork/" class="tag4">Artwork</a>
-	<a href="http://www.slitaz.org/en/get/flavors.html" class="tag6">LiveCD flavor</a>
-	<a href="http://boot.slitaz.org/" class="tag8">Web Boot</a>
-</p>
-</div>
-
-<!-- End of content -->
-</div>
-
-<!-- Footer. -->
-<div id="footer">
-	<div class="footer-right"></div>
-	<a href="#top">Top of the page</a>
-</div>
-
-<div id="copy">
-	Copyright &copy; 2009 <a href="http://www.slitaz.org/">SliTaz</a> -
-	<a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License</a>;<br />
-	Documentation publiées sous
-	<a href="http://www.gnu.org/copyleft/fdl.html">GNU Free Documentation License</a>
-	et codée en <a href="http://validator.w3.org/">xHTML 1.0 valide</a>.
-</div>
-
-</body>
-</html>
+index.en.html
