--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -34,8 +34,8 @@
 <p>
 The Cooking version doesn't provide Release Notes, any changes are announced
 on the web site and the <a href="http://labs.slitaz.org/">Labs</a> provide
-fresh news about the project activity. Like the stable version, you will find 
-documentation on the web site and support on the community forum.
+fresh news about the project's activity. Like the stable version, you will 
+find documentation on the web site and support on the community forum.
 </p>
 
 <!--
