--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1" />
 	<meta name="description" content="slitaz doc system releases notes information cooking" />
 	<meta name="expires" content="never" />
-	<meta name="modified" content="2009-04-16 10:30:00" />
+	<meta name="modified" content="2009-12-29 12:10:00" />
 	<meta name="publisher" content="www.slitaz.org" />
 	<meta name="author" content="Christophe Lincoln"/>
 	<link rel="shortcut icon" href="favicon.ico" />
@@ -16,13 +16,16 @@
 
 <!-- Header and quick navigation -->
 <div id="header">
-<div align="right" id="quicknav">
 	<a name="top"></a>
-	<a href="http://www.slitaz.org/">www.slitaz.org</a> |
-	<a href="http://forum.slitaz.org/">forum.slitaz.org</a> |
-	<a href="http://labs.slitaz.org/">labs.slitaz.org</a>
+	<h1><font color="#3E1220">SliTaz - System doc</font></h1>
 </div>
-<h1><font color="#3E1220">SliTaz - System doc</font></h1>
+
+<div id="quicknav">
+	SliTaz:
+	<a href="http://www.slitaz.org/">Website</a>
+	<a href="http://forum.slitaz.org/">Forum</a>
+	<a href="http://wiki.slitaz.org/">Wiki</a>
+	<a href="http://labs.slitaz.org/">Labs</a>
 </div>
 
 <!-- Content. -->
@@ -35,7 +38,8 @@
 The Cooking version doesn't provide Release Notes, any changes are announced
 on the web site and the <a href="http://labs.slitaz.org/">Labs</a> provide
 fresh news about the project's activity. Like the stable version, you will 
-find documentation on the web site and support on the community forum.
+find <a href="http://www.slitaz.org/en/doc/">documentation</a> on the web 
+site and support on the community <a href="http://forum.slitaz.org/">forum</a>.
 </p>
 
 <!--
@@ -52,50 +56,105 @@ community <a href="http://forum.slitaz.org/#idx2">Forum</a>.
 </p>
 -->
 
-<a name="cloud"></a>
-<!-- 10 Cloud tag are available. -->
-<div id="cloud">
-<p>
-	<a href="http://forum.slitaz.org/" class="tag6">Support</a>
-	<a href="http://www.slitaz.org/en/doc/handbook/livecd.html" class="tag9">LiveCD</a>
-	<a href="http://www.slitaz.org/en/doc/" class="tag3">Documentation</a>
-	<a href="http://www.slitaz.org/en/" class="tag7">SliTaz GNU/Linux</a>
-	<a href="http://www.slitaz.org/en/about/" class="tag4">About</a>
-	<a href="http://labs.slitaz.org/" class="tag6">Laboratories</a>
-	<a href="http://www.slitaz.org/en/doc/handbook/" class="tag6">Handbook</a>
-	<a href="http://www.slitaz.org/en/doc/handbook/network-config.html" class="tag4">Wifi</a>
-	<a href="http://www.slitaz.org/en/doc/handbook/packages.html" class="tag6">Package management</a>
-	<a href="http://www.slitaz.org/en/doc/handbook/liveusb.html" class="tag8">LiveUSB</a>
-	<a href="http://www.slitaz.org/en/devel/" class="tag5">Development</a>
-	<a href="http://www.slitaz.org/en/doc/handbook/enlightenment.html" class="tag3">e17</a>
-	<a href="http://www.slitaz.org/en/packages/" class="tag6">Packages</a>
-	<a href="http://wiki.slitaz.org/" class="tag6">Wiki</a>
-	<a href="http://www.slitaz.org/en/doc/cookbook/" class="tag3">Cookbook</a>
-	<a href="http://labs.slitaz.org/news" class="tag6">Labs News</a>
-	<a href="http://www.slitaz.org/en/doc/handbook/security.html" class="tag5">Security</a>
-	<a href="http://www.slitaz.org/en/doc/handbook/openbox.html" class="tag7">Openbox</a>
-	<a href="http://www.slitaz.org/en/mailing-list.html" class="tag5">Mailing list</a>
-	<a href="http://www.slitaz.org/en/artwork/" class="tag4">Artwork</a>
-	<a href="http://www.slitaz.org/en/get/flavors.html" class="tag6">LiveCD flavor</a>
-	<a href="http://boot.slitaz.org/" class="tag8">Web Boot</a>
-</p>
-</div>
+<h2><font color="#DF8F06">Getting started</font></h2>
 
+<a name="network"></a>
+<h3>Network connection</h3>
+<p>
+Click on the "Network Status Monitor" then "Configure" and the network 
+manager (netbox) should come up. You can go to the "DHCP" tab and click
+"Start", and Slitaz will send a DHCP request to the local router. You may
+also setup static IP, PPPoE, PPP, VPN and more through their respective tabs.
+To configure a wireless connection you can use SliTaz wifibox by clicking
+"Wireless Manager" in the Network Manager or from the "System Tools" menu 
+then "Wireless networks connections".
+</p>
+<p>
+Detailed information can be find in the Handbook: 
+<a href="http://www.slitaz.org/en/doc/handbook/network-config.html"
+	>Network configuration</a>
+</p>
+
+<a name="apps"></a>
+<h3>Applications</h3>
+<p>
+To have a list of graphical applications you can use the SliTaz menu button 
+at the bottom left of the screen. To have a list of command line tools, you
+can open a termnal an double press on the tabulation button. And to have
+a list of all installed packages you can use the package manager user interface
+from the panel icon or from the "System Tools" menu. To install some new packages
+you must have a network connection, a DVD of packages or a USB storage device with
+downloaded packages from an other machine.
+</p>
+
+<a name="office"></a>
+<h3>Office suite</h3>
+<p>
+SliTaz packages database provide some light weight applications to make office
+work, all these package are easily installable in a few click trought the packages
+manager. SliTaz also provide a simple way to install the famous and powerfull
+OpenOffice suite, just search OpenOffice in the package manager, double click
+on: get-OpenOffice3 and install the script with the <code>Auto exec</code> option
+enable. 
+</p>
+<p>
+To have a light office suite: Abiword as Word processor, Gnumeric as 
+Spreadsheet and Homebank for Bank Accounting.
+</p>
+
+<a name="info"></a>
+<h3>System information</h3>
+<p>
+You can get information on your system by clicking on "System information"
+in the System Tools menu, then clicking "Summary". Clicking on the other 
+options on the side brings you more information, and doing the benchmarks
+give you an idea on how fast your computer is. To have a list an control
+of all curent process you can use the "Task Manager".
+</p>
+
+<a name="root"></a>
+<h3>Becoming Root</h3>
+<p>
+By default, Slitaz doesn't have its desktop running as root administrator,
+and it asks for a root password (default <code>root</code>) for any dangerous work.
+Therefore, it is safer and more secure. To become root in an xterm, simply 
+type <code>su</code>, and enter the root password.
+</p>
+
+<a name="root"></a>
+<h3>Installation</h3>
+<p>
+SliTaz can be installed to hard disk or on a USN mass storage device using the
+"SliTaz Installer" from "System Tools" menu, the installer make a full HD install.
+SliTaz dont work in memory (RAM) anymore like in Live or Frugal mode and 
+everything is persistant.
+</p>
+<p>
+To generate a LiveUSB system you can use "Tazusb LiveUSB Tool" from "System Tools"
+or <code>tazusb</code> from the command line. More information can be found on SliTaz
+Handbook: <a href="http://www.slitaz.org/en/doc/handbook/liveusb.html"
+	>LiveUSB media</a>
+</p>
 <!-- End of content -->
 </div>
 
 <!-- Footer. -->
 <div id="footer">
 	<div class="footer-right"></div>
-	<a href="#top">Top of the page</a>
+	<a href="#top">Top of the page</a> - Languages:
+	<a href="index.de.html">de</a> |
+	<a href="index.en.html">en</a> |
+	<a href="index.fr.html">fr</a> |
+	<a href="index.hu.html">hu</a> |
+	<a href="index.pt.html">pt</a> |
 </div>
 
 <div id="copy">
-	Copyright &copy; 2009 <a href="http://www.slitaz.org/">SliTaz</a> -
+	Copyright &copy; 2010 <a href="http://www.slitaz.org/">SliTaz</a> -
 	<a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License</a>;<br />
-	Documentation publiées sous
+	Documentation uder
 	<a href="http://www.gnu.org/copyleft/fdl.html">GNU Free Documentation License</a>
-	et codée en <a href="http://validator.w3.org/">xHTML 1.0 valide</a>.
+	and valid <a href="http://validator.w3.org/">xHTML 1.0</a>.
 </div>
 
 </body>
